--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,50 @@
 /* You can add global styles to this file, and also import other style files */
+body, header {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: rgb(227, 235, 248);
+}
+
+body {
+    margin: 0;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.container {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    width: 75%;
+    max-width: 1400px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.container.container--center-align {
+    align-items: center;
+}
+
+.nav {
+    position: relative;
+    align-items: center;
+    padding: 2em 0 0.5em;
+}
+
+.nav__logo {
+    flex: 1 1 0;
+    align-self: flex-start;
+}
+
+.nav__navList {
+    flex: 1 1 0;
+    text-align: right;
+}
+
+.nav__navList-item {
+    display: inline-block;
+    padding: 50px 40px 0;
+    letter-spacing: 1px;
+    font-size: 1.5rem;
+}
