About section, not finished yet. Details part still missing

--- a/src/app/home/navbar/navbar.component.html
+++ b/src/app/home/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="nav">
-  <div class="container container--center-align">
+  <div class="container container--align-center">
     <div class="nav__logo">
       <img src="assets/img/hf.png">
     </div>
