--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 body, header {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: rgb(227, 235, 248);
+    /* background-color: rgb(253, 250, 249); */
+        background-color: rgb(227, 229 216);
+    color: rgb(97, 145, 180);
 }
 
 body {
@@ -12,24 +14,35 @@ ul {
     list-style-type: none;
 }
 
+a {
+    background-color: transparent;
+    color: inherit;
+    text-decoration: none;
+    -webkit-tap-highlight-color: transparent;
+    outline: none;
+}
+
 .container {
     display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    width: 75%;
-    max-width: 1400px;
+    flex-flow: row wrap;
+    width: 90%;
+    max-width: 1500px;
     margin-right: auto;
     margin-left: auto;
 }
 
-.container.container--center-align {
+.container.container--align-center {
     align-items: center;
+}
+
+.container.container--vertical {
+    flex-direction: column;
 }
 
 .nav {
     position: relative;
     align-items: center;
-    padding: 2em 0 0.5em;
+    padding: 2em 0 2em;
 }
 
 .nav__logo {
@@ -40,11 +53,49 @@ ul {
 .nav__navList {
     flex: 1 1 0;
     text-align: right;
+    margin: 0;
+    padding: 0;
 }
 
 .nav__navList-item {
     display: inline-block;
-    padding: 50px 40px 0;
+    padding: 0 40px;
     letter-spacing: 1px;
     font-size: 1.5rem;
+}
+
+.about {
+    max-width: 950px;
+    font-weight: 300;
+    font-size: 3rem;
+    line-height: 75px;
+}
+
+.companyLink {
+    color: rgb(205,214,249);
+    transition: color .25s ease 0s;
+}
+
+.companyLink:hover {
+    color: inherit;
+}
+
+.aboutDetails {
+    flex: 1 1 0;
+    margin-bottom: 1em;
+}
+
+.aboutDetailsLabel {
+    margin-bottom: 1em;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    font-weight: 300;
+}
+
+.aboutDetailsContent {
+    padding: 0 18px;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: #f1f1f1;
 }
