--- a/src/app/home/navbar/navbar.component.html
+++ b/src/app/home/navbar/navbar.component.html
@@ -3,8 +3,8 @@
     <div class="nav__logo">
       <img src="assets/img/hf.png">
     </div>
-    <ul class="nav__navList">
-      <li *ngFor="let item of navList" class="nav__navList-item">
+    <ul class="nav__nav-list">
+      <li *ngFor="let item of navList" class="nav__nav-list-item">
         {{item}}
       </li>
     </ul>
