--- a/src/styles.css
+++ b/src/styles.css
@@ -93,9 +93,31 @@ a {
     font-weight: 300;
 }
 
-.about-details-accordion-item-content {
+/* .about-details-accordion-item-content {
     padding: 0 18px;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
-    background-color: #f1f1f1;
+} */
+
+/* Pre hover */
+/* .about-details-accordion-item-content,
+.about-details-accordion .about-details-accordion-item-content {
+    height:  0;
+    overflow: hidden;
+    transition: height .25s;
+} */
+
+.about-details-accordion-item-content--hide {
+    height:  0;
+    overflow: hidden;
+    transition: height .25s;
+}
+
+/* Post hover */
+/* .about-details-accordion:hover .about-details-accordion-item:hover .about-details-accordion-item-content {
+    height:  6em;
+} */
+
+.about-details-accordion-item-content--show {
+    height:  6em;
 }
