Fixed accordion animation

--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -13,16 +13,14 @@
       <div class="about-details-accordion-item" (click)="toggleTechStackAccordion()">
         <h3 class="about-details-accordion-item-label">Tech Stack</h3>
         <div class="about-details-accordion-item-content"
-          [ngClass]="{ 'about-details-accordion-item-content--hide': !isToggledTechStackAccordion }"
-          [ngClass]="{ 'about-details-accordion-item-content--show': isToggledTechStackAccordion }">
+          [ngClass]="{ 'about-details-accordion-item-content--hide': !isToggledTechStackAccordion, 'about-details-accordion-item-content--show': isToggledTechStackAccordion }">
           hi hello
         </div>
       </div>
       <div class="about-details-accordion-item" (click)="toggleWorkExpAccordion()">
         <h3 class="about-details-accordion-item-label">Work Experience</h3>
         <div class="about-details-accordion-item-content"
-          [ngClass]="{ 'about-details-accordion-item-content--hide': !isToggledWorkExpAccordion }"
-          [ngClass]="{ 'about-details-accordion-item-content--show': isToggledWorkExpAccordion }">
+          [ngClass]="{ 'about-details-accordion-item-content--hide': !isToggledWorkExpAccordion, 'about-details-accordion-item-content--show': isToggledWorkExpAccordion }">
           hello hi
         </div>
       </div>
