Added Projects section, info still placeholder

--- a/src/app/home/projects/projects.component.html
+++ b/src/app/home/projects/projects.component.html
@@ -1,3 +1,47 @@
-<p>
-  projects works!
-</p>
+<div class="container container--align-center container--vertical">
+  <h2 class="project-section-title">
+    Projects
+  </h2>
+  <div class="project-card">
+    <div class="project-card-title">
+      Lorem Ipsum
+    </div>
+    <div class="project-card-description">
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat."
+    </div>
+    <div class="project-card-skills-container">
+      <div class="project-card-skills-item">
+        Lorem
+      </div>
+      <div class="project-card-skills-item">
+        Lorem Ipsum
+      </div>
+      <div class="project-card-skills-item">
+        Ipsum Dolor
+      </div>
+    </div>
+  </div>
+  <div class="project-card">
+    <div class="project-card-title">
+      Lorem Ipsum
+    </div>
+    <div class="project-card-description">
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat."
+    </div>
+    <div class="project-card-skills-container">
+      <div class="project-card-skills-item">
+        Lorem
+      </div>
+      <div class="project-card-skills-item">
+        Lorem Ipsum
+      </div>
+      <div class="project-card-skills-item">
+        Ipsum Dolor
+      </div>
+    </div>
+  </div>
+</div>
