--- a/src/styles.css
+++ b/src/styles.css
@@ -67,8 +67,8 @@ a {
 .about {
     max-width: 950px;
     font-weight: 300;
-    font-size: 3rem;
-    line-height: 75px;
+    font-size: 2.5rem;
+    line-height: 50px;
 }
 
 .company-link {
@@ -121,4 +121,41 @@ a {
 .about-details-accordion-item-content--show {
     transition: height .5s;
     height:  9em;
+}
+
+.project-section-title {
+    margin: 40px 0px;
+    font-weight: 350;
+    letter-spacing: 2px;
+    font-size: 1.75em;
+}
+
+.project-card {
+    width: 80%;
+    background: aliceblue;
+    margin: 25px;
+    padding: 25px;
+    border-radius: 5px;
+    box-shadow: 0 50px 100px rgba(50,50,93,.05), 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.1);
+}
+
+.project-card-title {
+    font-size: 1.25em;
+    margin-bottom: 10px;
+}
+
+.project-card-description {
+    margin-bottom: 15px;
+}
+
+.project-card-skills-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.project-card-skills-item {
+    font-size: .85em;
+    margin-right: 10px;
+    padding: 5px;
+    border-bottom: 2px solid blanchedalmond;
 }
